--- a/validation/src/main/resources/templates/validation/v2/addForm.html
+++ b/validation/src/main/resources/templates/validation/v2/addForm.html
@@ -23,9 +23,8 @@
     </div>
 
     <form action="item.html" th:action th:object="${item}" method="post">
-
         <div th:if="${#fields.hasGlobalErrors()}">
-            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">글로벌 오류 메시지</p>
+            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">글로벌 오류 메세지</p>
         </div>
 
         <div>
@@ -48,7 +47,7 @@
         <div>
             <label for="quantity" th:text="#{label.item.quantity}">수량</label>
             <input type="text" id="quantity" th:field="*{quantity}"
-                   th:errorclass="field-error" class="form-control" placeholder="수량을 입력하세요">
+                    th:errorclass="field-error" class="form-control" placeholder="수량을 입력하세요">
             <div class="field-error" th:errors="*{quantity}">
                 수량 오류
             </div>
